# idaes-compatibility

./: .gitignore  README.md  pyproject.toml
Robustness/: __init__.py
src/idaes-compatibility/apis/v2_0_0_a3/: flash_unit_solution_testing.py  flash_unit_tutorial.py  test_flash_unit_tutorial.py
src/idaes_compatibility/apis/v2_0_0/examples/custom_models/: methanol_state_block_VLE.py  test_custom_compressor.py  test_custom_physical_properties.py  test_custom_reactions.py
src/idaes_compatibility/apis/v2_0_0/examples/dae/: pid.py  test_petsc_pid_example.py
src/idaes_compatibility/apis/v2_0_0/examples/surrogates/: test_pysmo_example.py
src/idaes_compatibility/apis/v2_0_0/examples/unit_models/: eg_h2o_ideal.py  test_compressor.py  test_cstr.py  test_equilibrium_reactor.py  test_feed.py  test_flash.py  test_mixer.py  (+6 more)
src/idaes_compatibility/apis/v2_0_0/tutorials/: hda_ideal_VLE.py  test_introduction_tutorial.py
src/idaes_compatibility/apis/v2_0_0_a3/: test_introduction_tutorial.py
src/idaes_compatibility/apis/v2_0_0_a3/examples/: __init__.py
src/idaes_compatibility/apis/v2_0_0_a3/tutorials/: hda_ideal_VLE.py  hda_reaction.py  test_flash_unit_tutorial.py  test_hda_flowsheet.py  test_introduction_tutorial.py
src/idaes_compatibility/robustness/unit_models/: cstr.json  flash.json  hx0d.json  isothermal_pressure_changer.json  requil.json  rgibbs.json  test_cstr.py  test_flash.py  test_hx0d.py  test_pressure_changer.py  test_requil.py  test_rgibbs.py
src/idaes_compatibility/verification/IAPWS95/: test_iawps_verification.py
src/idaes_compatibility/verification/SWCO2/: .~lock.co2_supercritical_data.csv#
src/idaes_compatibility/verification/properties/: test_haber_bosch_validation_PR.py
src/idaes_compatibility/verification/properties/IAPWS95/: test_iawps_verification.py
src/idaes_compatibility/verification/properties/SWCO2/: test_swco2_verification.py
src/idaes_compatibility/verification/properties/eNRTL/: test_enrtl_verification_2_solvent.py  test_enrtl_verification_KCl.py  test_enrtl_verification_NaCl.py  test_enrtl_verification_NaCl_KCl.py
(+24 files in other folders)
