[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
    name = "idaes-compatibility"
    description = "IDAES Backward Compatibility Tests"
    readme = "README.md"
    dynamic = ["version"]
    license = {text="BSD"}
    requires-python = ">=3.7"
    authors = [
        {name="The IDAES Project"},
        {name="Andrew Lee", email="andrew.lee@netl.doe.gov"},
    ]
    classifiers = [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: End Users/Desktop",
            "Intended Audience :: Science/Research",
            "License :: OSI Approved :: BSD License",
            "Natural Language :: English",
            "Operating System :: MacOS",
            "Operating System :: Microsoft :: Windows",
            "Operating System :: Unix",
            "Programming Language :: Python",
            "Programming Language :: Python :: 3",
            "Programming Language :: Python :: 3.7",
            "Programming Language :: Python :: 3.8",
            "Programming Language :: Python :: 3.9",
            "Programming Language :: Python :: 3.10",
            "Programming Language :: Python :: Implementation :: CPython",
            "Topic :: Scientific/Engineering :: Mathematics",
            "Topic :: Scientific/Engineering :: Chemistry",
            "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "idaes-pse",
        "pytest>=7",
    ]
    keywords = ["IDAES", "energy systems", "chemical engineering", "process modeling"]

[project.optional-dependencies]
dev = [
    "black ~= 22.8.0",
    # For adding copyright headers (see addheader.yml and the readme)
    "addheader >= 0.3.0"
]

[project.urls]
github = "https://github.com/idaes/idaes-compatibility"
issues = "https://github.com/idaes/idaes-compatibility/issues"


[tool.pytest.ini_options]
minversion = "7.0"

